--- a/WestLake/res/values/strings.xml
+++ b/WestLake/res/values/strings.xml
@@ -8,5 +8,9 @@
     <string name="sites">景点</string>
     <string name="knows">百科</string>
     <string name="more">更多</string>
+    
+    <color name="black">#000000</color>
+    <color name="gold">#FFD700</color>
+    <color name="azure">#F0FFFF</color><!-- 蔚蓝色 -->
 
 </resources>
