--- a/WestLake/res/values/strings.xml
+++ b/WestLake/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="honmepage">首页</string>
     <string name="search">导览</string>
     <string name="sites">景点</string>
-    <string name="knows">百科</string>
+    <string name="wiki">百科</string>
     <string name="more">更多</string>
     <string name="active">文化活动</string>
     <string name="food">美食活动</string>
