--- a/WestLake/res/values/strings.xml
+++ b/WestLake/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="show">演出活动</string>
     <string name="exhibition">文化会展</string>
     <string name="westlake">西湖寻梅</string>
+    <string name="wikititle">非物质文化遗产</string>
     
     <color name="black">#000000</color>
     <color name="gold">#FFD700</color>
